--- a/public/index.html
+++ b/public/index.html
@@ -90,6 +90,9 @@
 
 	<!-- Sentry DSN -->
 	<link rel="preconnect" href="https://o508348.ingest.sentry.io/">
+
+	<!-- FontAwesome Kit -->
+	<script src="https://kit.fontawesome.com/ababa184a7.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
